Coqbottom renamed to Cybele

--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 ===============================================================================
 
-                                  Coqbottom
+                                  Cybele
  
                Coq as an interactive programming language with effects
 
-                        http://coqbottom.gforge.inria.fr/
+                        http://cybele.gforge.inria.fr/
 
 ===============================================================================
 
